--- a/app/src/main/res/menu/main_toolbar_menu.xml
+++ b/app/src/main/res/menu/main_toolbar_menu.xml
@@ -2,9 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_history"
+        android:icon="@mipmap/ic_history"
+        android:title="History"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_add"
         android:icon="@mipmap/ic_add"
-        android:title="Search"
-        app:showAsAction="ifRoom" />
+        android:title="Add"
+        app:showAsAction="ifRoom"
+        android:visible="false"/>
+    <item
+        android:id="@+id/action_ok"
+        android:icon="@mipmap/ic_ok"
+        android:title="Add"
+        app:showAsAction="ifRoom"
+        android:visible="false"/>
 
 </menu>
