--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="common_tab_color_selected">#404040</color>
     <color name="common_tab_color_normal">#b3b3b3</color>
+    <color name="account_update_submit">#03b875</color>
 </resources>
