--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -26,140 +26,34 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="16dp"
             android:drawableRight="@mipmap/go_ic"
-            android:text="20:00" />
+            android:text="00:00" />
     </RelativeLayout>
 
     <include layout="@layout/common_divider" />
 
-    <LinearLayout
+
+    <RelativeLayout
         android:id="@+id/add_alarm_repeat_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:foreground="?android:attr/selectableItemBackground">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:foreground="?android:attr/selectableItemBackground">
+            android:padding="16dp"
+            android:text="重复" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:text="重复" />
-
-            <TextView
-                android:id="@+id/add_alarm_repeat_txv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="16dp"
-                android:drawableRight="@mipmap/go_ic"
-                android:text="只响一次" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/add_alarm_repeat_txv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/add_alarm_repeat_once"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="只响一次" />
-
-            <Button
-                android:id="@+id/add_alarm_repeat_everyday"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="每天" />
-
-            <Button
-                android:id="@+id/add_alarm_repeat_week"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="按周" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/add_alarm_choose_week_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/add_alarm_repeat_monday"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="4dp"
-                android:background="@drawable/common_circle_normal"
-                android:gravity="center"
-                android:text="周一" />
-
-            <TextView
-                android:id="@+id/add_alarm_repeat_tuesday"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="4dp"
-                android:background="@drawable/common_circle_normal"
-                android:gravity="center"
-                android:text="周二" />
-
-            <TextView
-                android:id="@+id/add_alarm_repeat_wednesday"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="4dp"
-                android:background="@drawable/common_circle_normal"
-                android:gravity="center"
-                android:text="周三" />
-
-            <TextView
-                android:id="@+id/add_alarm_repeat_thursday"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="4dp"
-                android:background="@drawable/common_circle_normal"
-                android:gravity="center"
-                android:text="周四" />
-
-            <TextView
-                android:id="@+id/add_alarm_repeat_friday"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="4dp"
-                android:background="@drawable/common_circle_normal"
-                android:gravity="center"
-                android:text="周五" />
-
-            <TextView
-                android:id="@+id/add_alarm_repeat_saturday"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="4dp"
-                android:background="@drawable/common_circle_normal"
-                android:gravity="center"
-                android:text="周六" />
-
-            <TextView
-                android:id="@+id/add_alarm_repeat_sunday"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="4dp"
-                android:background="@drawable/common_circle_normal"
-                android:gravity="center"
-                android:text="周日" />
-        </LinearLayout>
-    </LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16dp"
+            android:drawableRight="@mipmap/go_ic"
+            android:text="只响一次" />
+    </RelativeLayout>
 
     <include layout="@layout/common_divider" />
 
@@ -212,6 +106,7 @@
     <include layout="@layout/common_divider" />
 
     <RelativeLayout
+        android:id="@+id/add_alarm_ringtone_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground">
@@ -230,15 +125,18 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="16dp"
             android:drawableRight="@mipmap/go_ic"
-            android:text="布谷鸟" />
+            android:text="无" />
     </RelativeLayout>
 
     <Button
         android:id="@+id/add_alarm_delete_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/selector_common_green_btn"
         android:text="删除闹钟"
+        android:textColor="#ffffff"
         android:visibility="gone" />
 
 </LinearLayout>
