--- a/app/src/main/res/layout/note_new_item.xml
+++ b/app/src/main/res/layout/note_new_item.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginTop="16dp"
     android:background="#ffffff"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:foreground="?android:attr/selectableItemBackground">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="2017-05-01 21:46" />
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="下班之后去超市买桶面"
-        android:textSize="16sp" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/note_item_time_txv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2017-05-01 21:46" />
+
+        <TextView
+            android:id="@+id/note_item_content_txv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:text="下班之后去超市买桶面"
+            android:textSize="16sp" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
