--- a/app/src/main/res/drawable/common_circle_normal.xml
+++ b/app/src/main/res/drawable/common_circle_normal.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+    android:shape="rectangle">
 
     <stroke
         android:width="2dp"
-        android:color="#de000000" />
+        android:color="@color/colorPrimary" />
+    <corners
+        android:bottomLeftRadius="30dp"
+        android:bottomRightRadius="30dp"
+        android:topLeftRadius="30dp"
+        android:topRightRadius="30dp" />
+
     <solid android:color="#ffffff" />
 </shape>
