--- a/app/src/main/res/layout/fragment_warm.xml
+++ b/app/src/main/res/layout/fragment_warm.xml
@@ -17,8 +17,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:background="@mipmap/shidigongyuan"
-                app:layout_aspectRatio="200%"
+                android:background="@mipmap/bg_schedule_umbrella_item"
+                app:layout_aspectRatio="230%"
                 app:layout_widthPercent="100%" />
 
             <RelativeLayout
@@ -44,15 +44,14 @@
                     android:text="下雨提醒我带伞"
                     android:textColor="#ffffff" />
 
-                <Button
+                <android.support.v7.widget.SwitchCompat
                     android:id="@+id/warm_raining_reminder_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="right"
-                    android:layout_marginRight="16dp"
-                    android:text="开启" />
+                    android:layout_marginRight="16dp" />
             </RelativeLayout>
         </android.support.percent.PercentRelativeLayout>
 
@@ -65,8 +64,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="16dp"
-                android:background="@mipmap/shidigongyuan"
-                app:layout_aspectRatio="200%"
+                android:background="@mipmap/bg_schedule_cool_item"
+                app:layout_aspectRatio="230%"
                 app:layout_widthPercent="100%" />
 
             <RelativeLayout
@@ -89,18 +88,64 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="16dp"
                     android:layout_toRightOf="@id/warm_colder_reminder_img"
-                    android:text="靠近常用wifi时提醒我"
+                    android:text="降温时提醒我加衣服"
                     android:textColor="#ffffff" />
 
-                <Button
+                <android.support.v7.widget.SwitchCompat
                     android:id="@+id/warm_colder_reminder_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="right"
-                    android:layout_marginRight="16dp"
-                    android:text="开启" />
+                    android:layout_marginRight="16dp" />
+            </RelativeLayout>
+        </android.support.percent.PercentRelativeLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            android:id="@+id/warm_wifi_reminder_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="16dp"
+                android:background="@mipmap/bg_schedule_wifi_item"
+                app:layout_aspectRatio="230%"
+                app:layout_widthPercent="100%" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true">
+
+                <ImageView
+                    android:id="@+id/warm_wifi_reminder_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:background="@mipmap/ic_alarm" />
+
+                <TextView
+                    android:id="@+id/warm_wifi_reminder_txv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:layout_toRightOf="@id/warm_wifi_reminder_img"
+                    android:text="靠近常用wifi时提醒我"
+                    android:textColor="#ffffff" />
+
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/warm_wifi_reminder_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="16dp" />
             </RelativeLayout>
         </android.support.percent.PercentRelativeLayout>
     </LinearLayout>
