--- a/app/src/main/res/menu/main_toolbar_menu.xml
+++ b/app/src/main/res/menu/main_toolbar_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_voice"
+        android:icon="@mipmap/ic_voice"
+        android:title="Voice"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_history"
         android:icon="@mipmap/ic_history"
         android:title="History"
@@ -10,13 +15,13 @@
         android:id="@+id/action_add"
         android:icon="@mipmap/ic_add"
         android:title="Add"
-        app:showAsAction="ifRoom"
-        android:visible="false"/>
+        android:visible="false"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_clear"
         android:icon="@mipmap/clear_ic"
         android:title="Clear"
-        app:showAsAction="ifRoom"
-        android:visible="false"/>
+        android:visible="false"
+        app:showAsAction="ifRoom" />
 
 </menu>
